--- a/WebApp1/Views/Home/Delete.cshtml
+++ b/WebApp1/Views/Home/Delete.cshtml
@@ -1,9 +1,8 @@
 ﻿@model User
 
-<h2>Delete User</h2>
+<h2>Delete </h2>
 
 <div>
-    <h4>Are you sure you want to delete this user?</h4>
     <div>
         <h5>Name: @Model.Name</h5>
         <h5>Date of Birth: @Model.DateOfBirth.ToString("yyyy-MM-dd")</h5>
@@ -13,6 +12,6 @@
     </div>
     <form method="post" asp-action="DeleteConfirmed" asp-route-id="@Model.Id">
         <button type="submit" class="btn btn-danger">Delete</button>
-        <a href="@Url.Action("UserList")" class="btn btn-secondary">Cancel</a>
+        <a href="@Url.Action("UserList")" class="btn btn-secondary">Back</a>
     </form>
 </div>
